name:                   terminal-punch
version:                0.1
synopsis:               Simple command-line time tracker
-- description:
license:                BSD3
license-file:           LICENSE
author:                 Emil Axelsson
maintainer:             78emil@gmail.com
copyright:              2018 Emil Axelsson
-- category:
build-type:             Simple
extra-source-files:     ChangeLog.md
cabal-version:          >=1.10

executable punch
  hs-source-dirs:       lib .
  main-is:              Main.hs
  other-modules:        Punch
  build-depends:        ansi-terminal >=0.6
                      , base <5
                      , filepath >= 1.1
                      , text >= 1.2
                      , time >= 1.9
  default-language:     Haskell2010
  default-extensions:   DeriveFunctor
                        FlexibleContexts
                        TypeFamilies
  ghc-options:          -Wall

test-suite tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       lib tests
  main-is:              Tests.hs
  other-modules:        Punch
  build-depends:        base
                      , QuickCheck
                      , time >= 1.9
  default-language:     Haskell2010
  default-extensions:   FlexibleContexts
                        TupleSections
                        TypeFamilies
